fix(MultiValueContainer): align items vertically

--- a/src/components/Dropdown/components/MultiValueContainer/MultiValueContainer.module.scss
+++ b/src/components/Dropdown/components/MultiValueContainer/MultiValueContainer.module.scss
@@ -39,6 +39,7 @@
   }
 }
 
-.value-container-dialog-content {
-  max-width: 300px;
+.valueDialogContent {
+  display: flex;
+  flex-direction: column;
 }
